<resources>
    <string name="app_name">homework8_UsersActivity</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="email_hint">Email</string>
    <string name="email">Email:</string>
    <string name="required_field">Required Field</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
</resources>