<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/screen_background">

 <androidx.appcompat.widget.AppCompatEditText
     android:id="@+id/edFirstName"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/first_name_hint"
     android:layout_margin="10dp"
     app:layout_constraintTop_toTopOf="parent"
     app:layout_constraintStart_toStartOf="parent"/>

 <androidx.appcompat.widget.AppCompatEditText
     android:id="@+id/edLastName"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/last_name_hint"
     android:layout_margin="10dp"
     app:layout_constraintTop_toBottomOf="@id/edFirstName"
     app:layout_constraintStart_toStartOf="parent"/>

 <androidx.appcompat.widget.AppCompatEditText
     android:id="@+id/edEmail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:hint="@string/email_hint"
     android:layout_margin="10dp"
     app:layout_constraintTop_toBottomOf="@id/edLastName"
     app:layout_constraintStart_toStartOf="parent"/>

 <androidx.appcompat.widget.AppCompatImageButton
     android:id="@+id/btnAdd"
     android:layout_width="32dp"
     android:layout_height="32dp"
     android:layout_marginStart="188dp"
     android:layout_marginTop="16dp"
     android:background="@drawable/add_button"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toBottomOf="@id/edEmail"/>

 <androidx.recyclerview.widget.RecyclerView
     android:id="@+id/recyclerView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
     android:paddingBottom="50dp"
     tools:listitem="@layout/user_recyclerview"
     app:layout_constraintTop_toBottomOf="@id/btnAdd"/>

</androidx.constraintlayout.widget.ConstraintLayout>